Perkin-UAT/force-app/main/default/objects/Licensed_Products__c/Licensed_Products__c.object-meta.xml
<CustomObject>
    <label>Licensed Products</label>
    <nameField>
        <label>Software Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licensed Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>