Perkin-UAT/force-app/main/default/objects/Licensed_Products__c/fields/MatNum__c.field-meta.xml
<CustomField>
    <fullName>MatNum__c</fullName>
    <label>MatNum</label>
    <length>12</length>
    <type>Text</type>
</CustomField>