Perkin-UAT/force-app/main/default/objects/Licensed_Products__c/fields/SAP_Order__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order__c</fullName>
    <label>SAP Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>