Perkin-UAT/force-app/main/default/objects/Licensed_Products__c/fields/SMA_Status__c.field-meta.xml
<CustomField>
    <fullName>SMA_Status__c</fullName>
    <label>SMA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>